--- a/build.xml
+++ b/build.xml
@@ -275,7 +275,6 @@
         var demoFiles = ds.getIncludedFiles();
         // get the values via Java API
         var basedir  = fs.getDir(project);
-        var htmlLinks = '<ul>';
         // Iterate over the demo files
         for (i = 0; i < demoFiles.length; i++) {
             var filename = demoFiles[i];
@@ -285,25 +284,9 @@
             project.setProperty('demo.html.name', file.getParent() + '/demo.html');
             project.setProperty('demo.js.name', file.getParent() + '/demo.js');
             project.executeTarget('create-sample');
-            htmlLinks += '<li><a href="examples/' + file.getParentFile().getName() + '/index.htm">' + file.getParentFile().getName() + '</a></li>\n';
         }
-        htmlLinks += '</ul>';
-        project.setProperty('index.html.links', htmlLinks);
-        project.executeTarget('create-sample-index');
         ]]>
     </scriptdef>
-
-    <target name="create-sample-index">
-        <!-- Copy the template index file and replace the properties -->
-        <copy file="samples/template-index.htm" tofile="${samples.dist.dir}/index.htm">
-            <filterchain>
-                <replacetokens>
-                    <token key="demo.title" value="${demo.title}"/>
-                    <token key="index.html.links" value="${index.html.links}"/>
-                </replacetokens>
-            </filterchain>
-        </copy>
-    </target>
 
     <target name="create-sample">
         <antcall target="create-sample-param"/>
@@ -384,6 +367,7 @@
         </copy>
 
         <!-- 3. Create samples -->
+        <!-- Assemble the demo.html and demo.js files into example files for highcharts and highstock -->
         <antcall target="create-samples">
             <param name="demo.title" value="Highcharts"/>
             <param name="samples.dir" value="samples/highcharts/demo"/>
@@ -394,8 +378,32 @@
             <param name="samples.dir" value="samples/stock/demo"/>
             <param name="samples.dist.dir" value="${dist.dir}/highstock/"/>
         </antcall>
-
-        <!-- 4. Copy graphics -->
+        <!-- The demos are checked in with references to highcharts.com to be able to run them from jsfiddle -->
+        <!-- replace these references with local paths here -->
+        <replace dir="${dist.dir}">
+            <replacefilter>
+                <replacetoken><![CDATA[<script type="text/javascript" src="http://www.highcharts.com/js/testing-exporting.js"></script>]]></replacetoken>
+                <replacevalue><![CDATA[<script type="text/javascript" src="../../js/highcharts.js"></script>
+<script type="text/javascript" src="../../js/modules/exporting.js"></script>]]></replacevalue>
+            </replacefilter>
+            <replacefilter>
+                <replacetoken><![CDATA[<script type="text/javascript" src="http://www.highcharts.com/js/testing-stock.js"></script>]]></replacetoken>
+                <replacevalue><![CDATA[<script type="text/javascript" src="../../js/highstock.js"></script>]]></replacevalue>
+            </replacefilter>
+            <replacefilter>
+                <replacetoken><![CDATA[<script type="text/javascript" src="http://www.highcharts.com/js/testing-stock-exporting.js"></script>]]></replacetoken>
+                <replacevalue><![CDATA[<script type="text/javascript" src="../../js/highstock.js"></script>
+<script type="text/javascript" src="../../js/modules/exporting.js"></script>]]></replacevalue>
+            </replacefilter>
+            <include name="**/index.htm"/>
+        </replace>
+        <!-- Copy the analytics.tsv file to examples and make sure it has line ending 'lf' -->
+        <copy file="samples/highcharts/demo/line-ajax/analytics.tsv" todir="${dist.dir}/highcharts/examples/line-ajax/"/>
+        <fixcrlf file="${dist.dir}/highcharts/examples/line-ajax/analytics.tsv" eol="lf"/>
+        <!-- Copy index files -->
+        <copy file="samples/highcharts/demo/index.htm" todir="${dist.dir}/highcharts/"/>
+        <copy file="samples/stock/demo/index.htm" todir="${dist.dir}/highstock/"/>
+        <!-- Copy graphic files -->
         <copy todir="${dist.dir}/highcharts/graphics">
             <fileset dir="samples/graphics"/>
         </copy>
@@ -403,7 +411,7 @@
             <fileset dir="samples/graphics"/>
         </copy>
 
-        <!-- 5. Copy php export server -->
+        <!-- 4. Copy php export server -->
 <!--        <copy todir="${dist.dir}/highcharts/exporting-server">
             <fileset dir="${package.dir}/exporting-server"/>
         </copy>
@@ -411,7 +419,7 @@
             <fileset dir="${package.dir}/exporting-server"/>
         </copy>-->
 
-        <!-- 6. Create a zip files -->
+        <!-- 5. Create a zip files -->
         <zip destfile="${dist.dir}/${highcharts.product.name}-${highcharts.product.version}.zip" basedir="${dist.dir}/highcharts"/>
         <zip destfile="${dist.dir}/${highstock.product.name}-${highstock.product.version}.zip" basedir="${dist.dir}/highstock"/>
     </target>
