Further work on ordinal axes

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 /.metadata/
 /.settings/
+/build/dist/
+/build/lintreport.html
+/js/highcharts.js
+/js/highstock.js
+/js/adapters/mootools-adapter.js
+/js/adapters/prototype-adapter.js
+/js/modules/exporting.js
+/.project
