Updated jquery versions in tests to 1.7.1

--- a/build.xml
+++ b/build.xml
@@ -447,8 +447,8 @@
         <!-- jquery versions -->
         <antcall target="test-specific-lib">
             <param name="testrun.type" value="unit"/>
-            <param name="testrun.name" value="jquery-1.7"/>
-            <param name="required.lib" value="jquery-1.7.js"/>
+            <param name="testrun.name" value="jquery-1.7.1"/>
+            <param name="required.lib" value="jquery-1.7.1.js"/>
         </antcall>
         <antcall target="test-specific-lib">
             <param name="testrun.type" value="unit"/>
@@ -503,24 +503,24 @@
     <target name="test" description="Runs the unit tests using latest jquery. The server must be running (i.e. 'server').">
         <antcall target="test-specific-lib">
             <param name="testrun.type" value="unit"/>
-            <param name="testrun.name" value="jquery-1.7"/>
-            <param name="required.lib" value="jquery-1.7.js"/>
+            <param name="testrun.name" value="jquery-1.7.1"/>
+            <param name="required.lib" value="jquery-1.7.1js"/>
         </antcall>
     </target>
 
     <target name="it" description="Runs the integration tests using latest jquery. The server must be running (i.e. 'server').">
         <antcall target="test-specific-lib">
             <param name="testrun.type" value="it"/>
-            <param name="testrun.name" value="jquery-1.7"/>
-            <param name="required.lib" value="jquery-1.7.js"/>
+            <param name="testrun.name" value="jquery-1.7.1"/>
+            <param name="required.lib" value="jquery-1.7.1.js"/>
         </antcall>
     </target>
 
     <target name="gc" description="Runs the leaks tests using latest jquery. The server must be running (i.e. 'server').">
         <antcall target="test-specific-lib">
             <param name="testrun.type" value="gc"/>
-            <param name="testrun.name" value="jquery-1.7"/>
-            <param name="required.lib" value="jquery-1.7.js"/>
+            <param name="testrun.name" value="jquery-1.7.1"/>
+            <param name="required.lib" value="jquery-1.7.1.js"/>
         </antcall>
     </target>
 
