Disabled StockChartMemoryTest in master

--- a/test/gc/jsTestDriver.conf
+++ b/test/gc/jsTestDriver.conf
@@ -41,4 +41,4 @@ load:
   - test/gc/AreaChartMemoryTest.js
   - test/gc/BarChartMemoryTest.js
   - test/gc/PieChartMemoryTest.js
-  - test/gc/StockChartMemoryTest.js
+#  - test/gc/StockChartMemoryTest.js
