--- a/build.xml
+++ b/build.xml
@@ -177,7 +177,7 @@
         </concat>
 
         <!-- Concat canvg library together with rgbcolor script -->
-        <concat destfile="build/rgbcolor-canvg.src.js">
+        <concat destfile="build/canvas-tools.src.js">
             <filelist dir="lib/canvg-1.1/" files="rgbcolor.js, canvg.js"/>
             <filelist dir="js/modules/" files="canvgrenderer-extended.src.js"/>
         </concat>
@@ -271,8 +271,8 @@
         </antcall>
 
         <antcall target="compile">
-            <param name="param.src" value="build/rgbcolor-canvg.src.js"/>
-            <param name="param.out" value="build/rgbcolor-canvg.js"/>
+            <param name="param.src" value="build/canvas-tools.src.js"/>
+            <param name="param.out" value="build/canvas-tools.js"/>
         </antcall>
     </target>
 
