--- a/build.xml
+++ b/build.xml
@@ -86,6 +86,7 @@
             <file name="SvgRenderer.js"/>
             <file name="VmlRenderer.js"/>
             <file name="CanVGRenderer.js"/>
+            <file name="StackItem.js"/>
             <file name="Chart.js"/>
             <file name="Series.js"/>
             <file name="LineSeries.js"/>
@@ -111,6 +112,7 @@
             <file name="SvgRenderer.js"/>
             <file name="VmlRenderer.js"/>
             <file name="CanVGRenderer.js"/>
+            <file name="StackItem.js"/>
             <file name="Chart.js"/>
             <file name="Series.js"/>
             <file name="LineSeries.js"/>
