--- a/build.xml
+++ b/build.xml
@@ -86,6 +86,7 @@
             <file name="SvgRenderer.js"/>
             <file name="VmlRenderer.js"/>
             <file name="CanVGRenderer.js"/>
+            <file name="Tick.js"/>
             <file name="PlotLineOrBand.js"/>
             <file name="StackItem.js"/>
             <file name="Chart.js"/>
@@ -113,6 +114,7 @@
             <file name="SvgRenderer.js"/>
             <file name="VmlRenderer.js"/>
             <file name="CanVGRenderer.js"/>
+            <file name="Tick.js"/>
             <file name="PlotLineOrBand.js"/>
             <file name="StackItem.js"/>
             <file name="Chart.js"/>
