Added framework for building and running highcharts-more.js

--- a/build.xml
+++ b/build.xml
@@ -37,6 +37,7 @@
 
         <!-- highcharts/highstock src -->
         <property name="highcharts.parts.dir" location="${basedir}/js/parts"/>
+		<property name="highchartsmore.parts.dir" location="${basedir}/js/parts-more"/>
 
         <property name="highcharts.src.name" value="highcharts.src.js"/>
         <property name="highcharts.src.file" value="${basedir}/js/${highcharts.src.name}"/>
@@ -44,6 +45,9 @@
         <property name="highstock.src.name" value="highstock.src.js"/>
         <property name="highstock.src.file" value="${basedir}/js/${highstock.src.name}"/>
         <property name="highstock.minified.name" value="highstock.js"/>
+        <property name="highchartsmore.src.name" value="highcharts-more.src.js"/>
+        <property name="highchartsmore.src.file" value="${basedir}/js/${highchartsmore.src.name}"/>
+        <property name="highchartsmore.minified.name" value="highcharts-more.js"/>
         <property name="mootools.src.name" value="mootools-adapter.src.js"/>
         <property name="prototype.src.name" value="prototype-adapter.src.js"/>
         <property name="exporting.src.name" value="exporting.src.js"/>
@@ -136,6 +140,13 @@
             <file name="OrdinalAxis.js"/>
             <file name="Outro.js"/>
         </filelist>
+
+        <!-- This is the list of files for highstock -->
+        <filelist id="highchartsmore.files" dir="${highchartsmore.parts.dir}">
+            <file name="Intro.js"/>
+            <file name="AreaRangeSeries.js"/>
+            <file name="Outro.js"/>
+        </filelist>
     </target>
 
     <!-- Set up a clean build folder. -->
@@ -186,6 +197,19 @@
             </filterchain>
         </concat>
 
+        <!-- Concat highcharts-more src and replace the product name and version -->
+        <concat destfile="${highchartsmore.src.file}">
+            <filelist refid="highchartsmore.files"/>
+            <filterchain>
+                <replacetokens>
+                    <token key="product.name" value="${highcharts.product.name}"/>
+                    <token key="product.cdnpath" value="${highcharts.product.cdnpath}"/>
+                    <token key="product.version" value="${highcharts.product.version}"/>
+                    <token key="product.date" value="${highcharts.product.date}"/>
+                </replacetokens>
+            </filterchain>
+        </concat>
+
         <!-- Concat canvg library together with rgbcolor script -->
         <concat destfile="build/canvas-tools.src.js">
             <filelist dir="lib/canvg-1.1/" files="rgbcolor.js, canvg.js"/>
@@ -205,6 +229,7 @@
             <formatter type="plain"/>
             <formatter type="report" destfile="${build.dir}/lintreport.html"/>
             <fileset file="${highstock.src.file}"/>
+            <fileset file="${highchartsmore.src.file}"/>
             <fileset file="${mootools.src.file}"/>
             <fileset file="${prototype.src.file}"/>
             <fileset file="${exporting.src.file}"/>
@@ -263,6 +288,11 @@
         <antcall target="compile">
             <param name="param.src" value="${highstock.src.file}"/>
             <param name="param.out" value="${dist.dir}/highstock/js/${highstock.minified.name}"/>
+        </antcall>
+
+        <antcall target="compile">
+            <param name="param.src" value="${highchartsmore.src.file}"/>
+            <param name="param.out" value="${dist.dir}/highcharts/js/${highchartsmore.minified.name}"/>
         </antcall>
 
         <antcall target="compile">
