--- a/build.xml
+++ b/build.xml
@@ -93,6 +93,7 @@
             <file name="Tick.js"/>
             <file name="PlotLineOrBand.js"/>
             <file name="StackItem.js"/>
+            <file name="MouseTracker.js"/>
             <file name="Chart.js"/>
             <file name="Series.js"/>
             <file name="LineSeries.js"/>
@@ -121,6 +122,7 @@
             <file name="Tick.js"/>
             <file name="PlotLineOrBand.js"/>
             <file name="StackItem.js"/>
+            <file name="MouseTracker.js"/>
             <file name="Chart.js"/>
             <file name="Series.js"/>
             <file name="LineSeries.js"/>
