--- a/build.xml
+++ b/build.xml
@@ -143,6 +143,8 @@
             <file name="OHLCSeries.js"/>
             <file name="CandlestickSeries.js"/>
             <file name="FlagsSeries.js"/>
+            <file name="Scroller.js"/>
+            <file name="RangeSelector.js"/>
             <file name="StockNavigation.js"/>
             <file name="StockChart.js"/>
             <file name="OrdinalAxis.js"/>
