Started implementation of angular gauges

--- a/build.xml
+++ b/build.xml
@@ -156,6 +156,7 @@
             <file name="Intro.js"/>
             <file name="Globals.js"/>
             <file name="AreaRangeSeries.js"/>
+            <file name="GaugeSeries.js"/>
             <file name="Outro.js"/>
         </filelist>
     </target>
