--- a/build.xml
+++ b/build.xml
@@ -232,10 +232,12 @@
     </target>
 
     <!-- This target convert any mixed line endings to crlf. -->
+	<!-- TODO: Display warning for mixed line endings 
     <target name="check-crlf" depends="assemble">
-        <fixcrlf srcDir="${basedir}/js" includes="**/*.js" eol="lf" fixlast="false"/>
-        <fixcrlf srcDir="${basedir}/test" includes="**/*.js" eol="lf" fixlast="false"/>
+        <fixcrlf srcDir="${basedir}/js" includes="**/*.js" eol="crlf" fixlast="false"/>
+        <fixcrlf srcDir="${basedir}/test" includes="**/*.js" eol="crlf" fixlast="false"/>
     </target>
+	-->
 
     <!-- Runs jslint on generated source code. -->
     <target name="do-lint" depends="check-crlf">
