--- a/test/unit/jsTestDriverCoverage.conf
+++ b/test/unit/jsTestDriverCoverage.conf
@@ -16,6 +16,7 @@ load:
   - js/parts/SvgRenderer.js
   - js/parts/VmlRenderer.js
   - js/parts/Chart.js
+  - js/parts/Tooltip.js
   - js/parts/Series.js
   - js/parts/LineSeries.js
   - js/parts/AreaSeries.js
@@ -31,6 +32,7 @@ load:
   - test/unit/ColorTest.js
   - test/unit/DataGroupingTest.js
   - test/unit/UtilitiesTest.js
+  - test/unit/TooltipTest.js
   - test/unit/AdaptersTest.js
   - test/unit/RendererTest.js
 
